--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="/bilder.pimg1">
+    <div class="./bilder.pimg1">
         <div class="ptext"> <!-- BOKS MED TEKST -->
             <span class="border ">
                Donald Duck
@@ -23,7 +23,7 @@
 <!-- /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - */ -->
 
 
-    <div class="/bilder.pimg2">
+    <div class="./bilder.pimg2">
         <div class="ptext">
             <span class="border trans">
                 Walt Disney
@@ -40,7 +40,7 @@
 
     <!-- /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - */ -->
 
-    <div class="/bilder.pimg3">
+    <div class="./bilder.pimg3">
         <div class="ptext">
             <span class="border trans" style="color: black">
                Disneyland 
@@ -65,7 +65,7 @@
 
     <!-- /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - */ -->
 
-    <div class="/bilder.pimg1">
+    <div class="./bilder.pimg1">
         <div class="ptext">
             <span class="border">
                 <ins>Atle's Parallax Website</ins>
