removed bulled list and added textshadow on the img3 text

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
     <div class="pimg3">
         <div class="ptext">
-            <span class="border trans" style="color: black">
-               Disneyland 
+            <span class="border trans" >
+               <p class="darkColor">Disneyland</p> 
             </span>
         </div>
     </div>
-
+   
     <section class="section section-dark">
         <h2><ins>Disneyland</ins></h2>
         <p>Disneyland is an amusement park in Anaheim, California, founded in 1954 by Walt Disney and opened in 1955.</p>
