Removed ins tag
Hi, i did remove the ins tag on last span of this page. please fetch and get the new update to avoid merge conflicts ( this is a test )

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="pimg1">
         <div class="ptext">
             <span class="border">
-                <ins>Atle's Parallax Website</ins>
+                Atle's Parallax Website
             </span>
         </div>
     </div>
